barra navegación versión móvil

--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,18 @@
 
 
 /* Fin estrellas de valoración */
+
+
+/**********************************************************/
+/**********************************************************/
+/**********************************************************/
+/**********************************************************/
+
+/* Cabecera */
+.container-cabecera {
+    background-color: rgb(57,129,250);
+    padding: 1.5rem;
+}
+
+
+/* Fin cabecera */
