--- a/css/style.css
+++ b/css/style.css
@@ -85,4 +85,36 @@
     background-position: center;
 }
 
+/* .padding-rf {
+    padding-right:0px !important;
+}
+
+.padding-lf{
+    padding-left:0.10rem !important;
+} */
+
+
+
+.a {
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+}
+
+.c1 {
+    background-color: red;
+    
+}
+
+.c2 {
+    background-color: rgb(76, 0, 255);
+}
+
+.c3 {
+    background-color: rgb(9, 255, 0);
+}
+
+
+
+
 /* Fin cabecera */
