--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@
     background-size: cover;
     background-position: center;
 }
+/* Fin cabecera */
 
 /* .padding-rf {
     padding-right:0px !important;
@@ -93,28 +94,11 @@
     padding-left:0.10rem !important;
 } */
 
+/* New products */
 
-
-.a {
-    border: 1px solid black;
-    margin: 0;
-    padding: 0;
-}
-
-.c1 {
-    background-color: red;
-    
-}
-
-.c2 {
-    background-color: rgb(76, 0, 255);
-}
-
-.c3 {
-    background-color: rgb(9, 255, 0);
-}
+/* Fin new products */
 
 
 
 
-/* Fin cabecera */
+
