--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@
   }
   
   .clasificacion {
-    direction: rtl;
+    direction: initial;
     unicode-bidi: bidi-override;
   }
   
@@ -304,7 +304,7 @@
     justify-content: center;
     margin-top: 5rem;
     background-color: rgb(38,38,38);
-    padding: 4rem;Fin formulario
+    padding: 4rem;
 }
 
 .fname {
@@ -336,4 +336,22 @@
 }
 
 /* Fin formulario */
+
+
+
+
+
+
+
+.carrito{
+    display: flex;
+    width: 1000px;
+    height:500px;
+    background-color: khaki;
+}
+
+.over{
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.4);
+    -webkit-transform: scale(1.1);
+}
 
