Se añade funcionalidad de login

--- a/css/style.css
+++ b/css/style.css
@@ -376,10 +376,32 @@
 /* Fin formulario */
 
 
+/*********************************************/
+/*********************************************/
+            /* PÁGINA LOGIN */
+/*********************************************/
+/*********************************************/
+.formulario {
+    height: 25rem;
+    padding-top: 12rem;
+    padding-bottom: 25rem;
+}
+.form {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+    text-align: center;
+}
 
+.form input.form-control {
+    margin: 10px 0px;
+}
 
-
-
+.img-login {
+    width: 12rem;
+    
+}
 
 
 
